syntax = "proto3";

option java_package = "com.huanli233.biliterminal2.data.proto";
option java_multiple_files = true;

enum NightMode {
  NIGHT_MODE_DAY = 0;
  NIGHT_MODE_NIGHT = 1;
  NIGHT_MODE_AUTO = 2;
}

enum ImageFormat {
  IMAGE_FORMAT_WEBP = 0;
  IMAGE_FORMAT_JPEG = 1;
}

message UiSettings {
  float ui_scale = 1;
  int32 ui_padding_horizontal = 2;
  int32 ui_padding_vertical = 3;
  int32 density = 4;
  bool snackbar_enabled = 5;
  bool marquee_enabled = 6;
  bool grid_list_enabled = 7;
  bool round_mode = 8;
}

message Theme {
  NightMode night_mode = 1;
  bool follow_system_accent = 2;
  string color_theme = 3;
  bool full_screen_dialog_disabled = 4;
  bool animations_enabled = 5;
}

message ApiCache {
  string wbi_mixin_key = 1;
  int64 wbi_last_updated = 2;
}

message Preferences {
  bool back_disabled = 1;
  bool stop_load_image_while_scrolling = 2;
  ImageFormat image_format = 3;
  bool async_inflate_enabled = 4;
}

message AppSettings {
  int64 active_account_id = 1;
  bool first_run = 2;

  string menu_config = 3;

  UiSettings ui_settings = 4;
  Theme theme = 5;
  ApiCache api_cache = 6;
  Preferences preferences = 7;

  string language = 8;
}